--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -4,16 +4,15 @@ on:
   workflow_dispatch
 env:
   DIA_DE_SEMANA: Lunes
+  SALUDO: Hola
 jobs:
   saludo-variables:
     runs-on: ubuntu-latest
-    env:
-      SALUDO: Hola
     steps:
       - name: Saludo variables
-        run: echo "$SALUDO, ${{ vars.NOMBRE }}. Hoy es ${{ env.DIA_DE_SEMANA }}!"
+        run: echo "${{ env.SALUDO }}, ${{ vars.NOMBRE }}. Hoy es ${{ env.DIA_DE_SEMANA }}!"
   saludo-secreats:
     runs-on: ubuntu-latest
     steps:
       - name: Saludo secrets
-        run: echo "$SALUDO, ${{ vars.NOMBRE }}. tu contraseña es ${{ secrets.PASSWORD }}!"      
+        run: echo "${{ env.SALUDO }}, ${{ vars.NOMBRE }}. tu contraseña es ${{ secrets.PASSWORD }}!"      
